--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,25 @@
-body{
-    font-family: 'roboto', sans-serif;
-    color: #2E2F42;
+:root {
+    --title-color: #ffffff;
+    --second-title-color: #2e2f42;
+    --header-color: #2e2f42;
+    --main-btn-color: #ffffff;
+    --second-btn-color: #4d5ae5;
+    --subtitle-color: #2e2f42;
+    --text-color: #434455;
+    --typical-lh: 1.5;
+    --typical-fs: 16px;
+    --typical-fw: 500;
+}
+
+body {
+    font-family: "roboto", sans-serif;
+}
+h1,h2,h3,h4,h5,h6, p {
+    margin: 0;
+}
+ul{
+    margin: 0;
+    padding-left: 0;
 }
 .list {
     list-style: none;
@@ -15,46 +34,49 @@ body{
     margin: -1px;
     border: 0;
     padding: 0;
-    
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
 /*______________________HEADER____________________*/
+
 .header {
     background-color: white;
 }
 .header-navigation {
 }
 .header-logo {
-    font-family: 'Raleway', sans-serif;
+    line-height: 1.33;
+    color: var(--header-color);
+}
+
+.logo {
+    font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.33;
     display: flex;
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    /*color: #4D5AE5; */
 }
-.logo{
 
+span {
+    color: #4d5ae5;
 }
 .header-list {
 }
 .header-item {
 }
 .header-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
+    line-height: var(--typical-lh);
     letter-spacing: 0.02em;
+    color: var(--header-color);
 }
-.header-link:hover {
-
-}
-.link {
+.header-link:hover,
+.header-link:focus {
+    color: #404bbf;
 }
 .header-adress {
 }
@@ -62,51 +84,59 @@ body{
 }
 .adress-item {
 }
-.adress-mail {
+.contacs {
     font-style: normal;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: var(--typical-fs);
+    line-height: var(--typical-lh);
     letter-spacing: 0.02em;
-    color: #434455;
+    color: var(--text-color);
+}
+
+.adress-mail {}
+
+.adress-mail:hover,
+.adress-mail:focus {
+    color: #404bbf;
 }
 .adress-tel {
-    font-style: normal;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
 }
+
 /*______________________HERO____________________*/
+
 .hero {
-    background-color: #2E2F42;
+    background-color: #2e2f42;
 }
 .hero-title {
     font-size: 56px;
-    line-height: 1.07;
+    line-height: 1.16;
     text-align: center;
     letter-spacing: 0.02em;
-    color: #FFFFFF;
+    color: var(--title-color);
 }
 .hero-btn {
-    font-style: inherit;
-    font-weight: 600;
-    font-size: 16px;
     line-height: 1.19;
-    display: flex;
     align-items: center;
-    letter-spacing: 0.04em;
-    color: #FFFFFF;
-    background-color: #4D5AE5;
+    color: var(--main-btn-color);
+    background-color: #4d5ae5;
 }
-.hero-btn:hover, .hero-btn:focus{
-    background-color: #404BBF;
-    ;
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #404bbf;
 }
 
 .btn {
+    font-family: inherit;
+    font-size: var(--typical-fs);
+    font-weight: var(--typical-fw);
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
     border: none;
+    cursor: pointer;
 }
+
 /*_____________________BENEFITS____________________*/
+
 .benefits {
 }
 .benefits-list {
@@ -114,89 +144,87 @@ body{
 .benefits-item {
 }
 .benefits-subtitle {
-    font-weight: 500;
     font-size: 20px;
+    font-weight: var(--typical-fw);
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color: var(--subtitle-color);
 }
 .benefits-text {
-    font-size: 16px;
-    line-height: 1.5;
+    ont-size: var(--typical-fs);
+    line-height: var(--typical-lh);
     letter-spacing: 0.02em;
-    color: #434455;
+    color: var(--text-color);
 }
+
 /*______________________ABOUT____________________*/
-.about {
-}
-.about-title {
-    font-weight: 700;
+.title {
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    color: var(--second-title-color);
+}
+
+.about {}
+
+.about-title {
 }
 .about-list {
 }
 .about-item {
 }
+
 /*______________________TEAM____________________*/
+.text {
+    font-size: var(--typical-fs);
+    line-height: var(--typical-lh);
+    letter-spacing: 0.02em;
+}
+
+.subtitle {
+    font-size: 20px;
+    font-weight: var(--typical-fw);
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--subtitle-color);
+}
 .team {
-    background-color: #F4F4FD;
+    background-color: #f4f4fd;
 }
 .team-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
 }
 .team-list {
 }
 .team-item {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
 .team-img {
 }
 .team-subtitle {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
     text-align: center;
-    letter-spacing: 0.02em;
 }
 .team-text {
-    font-size: 16px;
-    line-height: 1.5;
     text-align: center;
-    letter-spacing: 0.02em;
-    color: #434455;    
+    color: var(--text-color);
 }
+
 /*______________________FOOTER____________________*/
+
 .footer {
-    background-color: #2E2F42;
+    background-color: #2e2f42;
 }
 .footer-logo {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 18px;
     line-height: 1.17px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #F4F4FD;
-    /*color: #4D5AE5;*/
+    color: #f4f4fd;
 }
 .footer-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #E7E9FC;
+    color: #e7e9fc;
 }
+
 /*______________________FILTER____________________*/
+
 .filter {
 }
 .filter-list {
@@ -204,25 +232,18 @@ body{
 .filter-item {
 }
 .filter-btn {
-    font-style: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: #4D5AE5;
-    background-color: #F4F4FD ;
+    line-height: var(--typical-lh);
+    color: var(--second-btn-color);
+    background-color: #f4f4fd;
 }
-.filter-btn:hover, .filter-btn:focus {
-    color: #FFFFFF;
-    background-color: #404BBF;
+.filter-btn:hover,
+.filter-btn:focus {
+    color: var(--main-btn-color);
+    background-color: #404bbf;
 }
-.btn {
-    cursor: pointer;
-}
+
 /*______________________GALLERY____________________*/
+
 .gallery {
 }
 .gallery-list {
@@ -232,14 +253,7 @@ body{
 .gallery-img {
 }
 .gallery-subtitle {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
 }
 .gallery-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
+    color: var(--text-color);
 }
